ajustes de repository